[package]
name = "vetkd_testing_canister"
version = "0.2.0"
edition = "2021"

resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
candid = "0.10.14"
futures = "0.3.31"
ic-cdk = "0.18.2-alpha.1"
ic-dummy-getrandom-for-wasm = "0.1.0"
ic-vetkeys = "0.2.0"
